[gd_scene load_steps=9 format=3 uid="uid://dpfjl1hb0313u"]

[ext_resource type="Script" path="res://Units/mele_unit_rigid.gd" id="1_c0148"]
[ext_resource type="Texture2D" uid="uid://by481ahciksr2" path="res://Units/unit_body_def.png" id="2_vcq6u"]
[ext_resource type="Texture2D" uid="uid://duo23o3515q5i" path="res://Units/unit_head.png" id="3_eyshu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jvusy"]
friction = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_x363p"]
radius = 36.3456

[sub_resource type="CircleShape2D" id="CircleShape2D_2vdy1"]
radius = 83.0542

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f53e0"]
bg_color = Color(0, 0, 0, 0.266667)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymkxn"]
bg_color = Color(0, 0.92549, 0.364706, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="mele_unit_rigid" type="RigidBody2D"]
mass = 60.0
physics_material_override = SubResource("PhysicsMaterial_jvusy")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_c0148")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(0, 22)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_vcq6u")
metadata/_edit_lock_ = true

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(0, -56)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_eyshu")
metadata/_edit_lock_ = true

[node name="UnitSpace" type="CollisionShape2D" parent="."]
position = Vector2(0, 46)
rotation = 1.5708
shape = SubResource("CircleShape2D_x363p")
metadata/_edit_lock_ = true

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_2vdy1")
debug_color = Color(0.909804, 0.266667, 0.356863, 0.219608)

[node name="Fight" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -110.0
offset_right = 150.0
offset_bottom = -70.0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxFlat_f53e0")
theme_override_styles/fill = SubResource("StyleBoxFlat_ymkxn")
max_value = 10.0
step = 1.0
show_percentage = false

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="timeout" from="Fight" to="." method="_on_fight_timeout"]
